force-app/main/default/objects/Engagement_Summary__c/Engagement_Summary__c.object-meta.xml
<CustomObject>
    <label>Engagement Summary</label>
    <nameField>
        <displayFormat>ES-{0000}</displayFormat>
        <label>Engagement Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engagement Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>