force-app/main/default/objects/Engagement_Summary__c/fields/Collective_Engagement_Insights__c.field-meta.xml
<CustomField>
    <fullName>Collective_Engagement_Insights__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Engagement Insights (Top 3 Co</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>