force-app/main/default/objects/Engagement_Summary__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Engagement Summaries</relationshipLabel>
    <relationshipName>Engagement_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>