force-app/main/default/objects/Engagement_Summary__c/fields/Contacts_Engaged__c.field-meta.xml
<CustomField>
    <fullName>Contacts_Engaged__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Top Engaged Contacts</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>