force-app/main/default/objects/Engagement_Summary__c/fields/Engagement_Channels_and_Performance__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Channels_and_Performance__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Engagement Channels and Performance</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>