force-app/main/default/objects/Engagement_Summary__c/fields/Key_Takeaways_and_Recommendations__c.field-meta.xml
<CustomField>
    <fullName>Key_Takeaways_and_Recommendations__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Key Takeaways and Recommendations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>