force-app/main/default/objects/Engagement_Summary__c/fields/Preferred_Channels_by_Top_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Channels_by_Top_Contacts__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Preferred Channels by Top Contacts</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>