force-app/main/default/objects/Engagement_Summary__c/fields/Prompt__c.field-meta.xml
<CustomField>
    <fullName>Prompt__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Prompt</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>