force-app/main/default/objects/Engagement_Summary__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Company__c</columns>
    <columns>Version__c</columns>
    <columns>Created_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>